Fix: minor asthetic adjustments for button spacing

--- a/PBL3/sass/custom.scss
+++ b/PBL3/sass/custom.scss
@@ -47,7 +47,7 @@ $body-padding: 58px;
 //button
 
 $btn-padding-y: 6px;
-$btn-padding-x: 32px;
+$btn-padding-x: 28px;
 $btn-border-radius: 8px;
 $btn-border-width: 2px;
 
